fix(component): fix image hidden when overflow

--- a/features/home/styles/introductionRight.module.css
+++ b/features/home/styles/introductionRight.module.css
@@ -11,7 +11,7 @@
     position: relative;
     width: 100%;
     aspect-ratio: 1;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
   
 .image {
